--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "image-blob-reduce": "^4.1.0",
+    "@react-oauth/google": "^0.12.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.0.4",
     "pica": "^9.0.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "replicate": "^1.0.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@types/image-blob-reduce": "^4.1.4",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
+    "@types/pica": "^9.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^8",
