完善付款代码, 并解决关键词密度问题

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=xxx.apps.googleusercontent.com
+
+NEXT_PUBLIC_PADDLE_CLIENT_TOKEN=test-xxx
+# sandbox  production
+NEXT_PUBLIC_PADDLE_ENV=sandbox
