--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@paddle/paddle-js": "^1.3.3",
     "@react-oauth/google": "^0.12.1",
     "jsonwebtoken": "^9.0.2",
     "next": "15.0.4",
