--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=xxx.apps.googleusercontent.com
 
+NEXT_PUBLIC_DOMAIN=imgres.online
 NEXT_PUBLIC_PADDLE_CLIENT_TOKEN=test-xxx
 # sandbox  production
 NEXT_PUBLIC_PADDLE_ENV=sandbox
